src/objects/Supplier_KPI_Callculation__c.object
<CustomObject>
    <fields>
        <fullName>EnterpriseID__c</fullName>
        <encrypted>true</encrypted>
        <label>EnterpriseID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsAdhoc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAdhoc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPI_Calculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI Calculation</label>
        <referenceTo>SPE_KPICalculation__c</referenceTo>
        <relationshipName>Supplier_KPI_Callculation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipName>Supplier_KPI_Callculation</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Supplier KPI Calculation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>EnterpriseID__c</columns>
        <columns>KPI__c</columns>
        <columns>KPI_Calculation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier KPI Calculation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>